      
    * Animated backdrops in battle [Mike Caron]

    * Attack bitset to force the heroes to run away [James Paige]

    * General bitset to "Disable Hero's Battle Cursor" [Yuriy]
    
    * Attack option to set a tag (with a number of options relating to what
      triggers the tag, and conditional to another tag) [Mike Caron]
      
    * Added bitset to cap damage at 9999 (Final Fantasy style) [Mike Caron]

  * Bug Fixes

    * Fixed bug 107: "An MP~ stat over 66 makes all spells free"
      [Ralph Versteegen]

    * In the plotscripting dictionary, NPCcount was described as
      returning number of npcs at spot with NPCatpixel or NPCatspot.
      This is incorrect, the constant getcount does this (and more).

    * c and v no longer appended to a string when copying and pasting
      [Ralph Versteegen]

    * Renamed attack bitset "No Reward from target" to
      "Erase rewards (Enemy target only)" to clarify that it
      happens even if the attack does not kill the target

    * Fixed off by one bug in "get attack name" [Ralph Versteegen]

    * Buggy "set enemy rewards" and "get enemy rewards" commands removed,
      use (previously undocumented) "read enemy data" and "write enemy
      data" instead (you can use the same constants)

    * Fixed bug 13: "No math overflow checking in battle" [Mike Caron]

    * Worked around bug 78: "Using Custom under DosBox dosen't allow for
      browsing certain areas." by avoiding the use of VAL() which is
      buggy in some versions of DosBox and QEMU [James Paige]

  * New Plotscripting Commands

    * "cancel map name display" [James Paige]
    * "seconds of play", "set days of play", "set hours of play",
      "set minutes of play", "set seconds of play" [Mike Caron]
    * "read NPC" (counterpart of alter NPC) [James Paige]
    * "set hero level", "give experience", "hero levelled",
      "spells learnt" [Ralph Versteegen]
    * "get music volume", "set music volume" [Ralph Versteegen]
